[gd_scene load_steps=2 format=3 uid="uid://q447151upnmk"]

[ext_resource type="Script" uid="uid://jepyup6wpwm5" path="res://ui/components/system_summary_tooltip.gd" id="1_sgh8g"]

[node name="SystemSummaryTooltip" type="PanelContainer"]
script = ExtResource("1_sgh8g")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="SystemNameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="CelestialBodiesLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="InhabitedLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
